--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ include: ['_pages']
 markdown: kramdown
 kramdown:
   input: GFM
-theme: minima
+theme: jekyll-theme-cayman
 gems:
   - jekyll-feed
 exclude:
